Remove the current profile from the profile chooser menu.

Bug: 854638
Change-Id: I32e08f3f33558f7286f5cd80b05e86aa0dae0dd4
Reviewed-on: https://chromium-review.googlesource.com/1146817
Commit-Queue: Bret Sepulveda <bsep@chromium.org>
Reviewed-by: Bret Sepulveda <bsep@chromium.org>
Cr-Commit-Position: refs/heads/master@{#577222}
Former-commit-id: 4c68d5ce2f4391208e50e2e50bb1d6c3cecaa0c1